--- a/package.json
+++ b/package.json
@@ -13,21 +13,31 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
-    "@heroicons/react": "^2.1.3",
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
+    "@rehookify/datepicker": "^6.6.1",
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
+    "@sendgrid/mail": "^8.1.3",
     "@shopify/cli": "3.58.0",
     "@shopify/cli-hydrogen": "^8.0.0",
     "@shopify/hydrogen": "2024.4.0",
     "@shopify/remix-oxygen": "^2.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.11",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-google-places-autocomplete": "^4.0.1",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
